
1.1:  Second public release
SOL -	Added license file support (eula="license.txt" option for install XML)
SOL -   Added support for <script> elements in options
SOL -	Added preinstall and postinstall script support
SOL -   Added web browser launch support (url="http://....")
SOL -   Added -c command line option to change working directory
SOL -   Added the "path" attribute to the install element
SOL -   The console ui now checks for write permissions on install path
SOL -   Fixed crash with nameless options
SOL -   Wrote documentation for XML setup specification file

1.0:  First public release

Initial Key:
SOL - Sam Lantinga (hercules@lokigames.com)